# python-cmake-cpp

./: .gitmodules  CMakeLists.txt  README.md  setup.py
.github/workflows/: format.yml  pip.yml
src/: header.h  hv_numerical.cpp  main.cpp  preprocessing.cpp  test_process.cpp  workflows.cpp
src/cvnp/: cvnp.cpp  cvnp.h  cvnp_synonyms.cpp  cvnp_synonyms.h  pydef_cvnp.cpp
